# aegis

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  dagmc_call.cpp  runSettings.txt  settings.txt
.github/workflows/: buildTest.yml  cmake.yml  docker.yml  docker_image.yml  docker_image_pull.yml  docker_image_push.yml  vtune-docker.yml  vtune.yml  weekly_dependencies.yml
docker/: Dockerfile
docker/limited_build/: Dockerfile
docker/vtune-ci/: .Dockerfile.swp  Dockerfile
docker/weekly_build/: Dockerfile
inres1/: EQ3_cubes.h5m  EQ3_cubes.json  aegis_settings.json  mast.json
python/: CMakeLists.txt  CTestTestfile.cmake  Readme.md  dagmc_call_pybind11.cpp  test_wrap.py
scripts/: build_aegis_csd3.sh  build_aegis_ubuntu.sh  parallel-gdb
src/aegis/: CMakeLists.txt  aegis.cpp
src/aegis_lib/: AegisBase.cpp  AegisBase.h  CMakeLists.txt  CoordTransform.cpp  CoordTransform.h  DataClass.cpp  DynamicBatching.cpp  DynamicBatching.h  EquilData.cpp  EquilData.h  Inputs.cpp  Inputs.h  Integrator.cpp  Integrator.h  Particle.cpp  Particle.h  ParticleSimulation.cpp  ParticleSimulation.h  SimpleLogger.cpp  SimpleLogger.h  Source.cpp  Source.h  VtkInterface.cpp  VtkInterface.h  aegisClass.cpp  aegisClass.h  coordtfm.cpp  coordtfm.h  equData.cpp  equData.h  inputs.cpp  inputs.hpp  integrator.cpp  integrator.h  particle.cpp  particle.h  postfm.cpp  postfm.h  settings.cpp  settings.hpp  (+5 more)
src/dagmc_call/: CMakeLists.txt  dagmc_call.cpp  settings.cpp  settings.hpp  simpleLogger.cpp  simpleLogger.h
src/dagmc_call_lib/: CMakeLists.txt  DataClass.hpp  equData.cpp  equData.h  settings.cpp  settings.hpp  simpleLogger.cpp  source.cpp  source.h
test/: CMakeLists.txt
test/Data/: cart_vertex.txt  flux_vertex.txt  inres1.h5m  psi_1d_pts.txt  runSettings.txt  test.eqdsk
test/convex_hull/: CMakeLists.txt  convex_hull.cpp  temp
test/data/: BField_rz.txt  EQ3.eqdsk  aegis_b.txt  aegis_settings.json  big_pipe.h5m  exps00000200.qry  inres1.stl  inres1_shad.h5m  out.vtk  psi_1d_pts.txt  psi_RZ.gnu  runSettings.txt  scaled_fixed_end.h5m  smardda-intersect.txt  smardda_inres1_shadowQ.txt  smardda_qvalues.txt  testSettings.txt  valgrind-out.txt
test/regression/: CMakeLists.txt  inres1_regression.cpp
test/unit/: CMakeLists.txt  aegis_unit.cpp  dagmc_call_test.cpp  example_test.cpp  sduct.h5m  triple_block.h5m
